# robocup_tools

./: README.md  RoboCup.py  pyproject.toml
RoboCup/: __init__.py
src/RoboCup/: Demo_RoboCup.py  Menu.py  __init__.py
src/robocup_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
